# cabinet

./: .gitignore  Cargo.toml  Makefile  README.md
src/: boilerplate.rs  common.rs  dir.rs  dir_entry.rs  file.rs  file_entry.rs  main.rs
src/database/: boilerplate.rs  dir.rs  file.rs  mod.rs  tables.sql
src/request_handlers/: boilerplate.rs  dir.rs  file.rs  mod.rs  status.rs
tests/: boilerplates.test  common.tcl  common.zsh  db.zsh  dirs.test  files.test  init_test_db.sql  main.tcl  tester.tcl
