[package]
name = "cabinet"
version = "1.0.1"
authors = ["Magnus Hirth <magnus.hirth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
anyhow = "1.0"
async-std = { version = "1.10", features = ["attributes"] }
chrono = "0.4"
clap = "2.33"
env_logger = "0.8"
getset = "0.1"
hex = "0.4"
lazy_static = "1.4"
mime_guess = "2.0"
rusqlite = { version = "0.26", features = ["chrono"] }
serde = "1.0.126"
serde_json = "1.0.64"
sha-1 = "0.9"
mhlog = "3.0"
quick-error = "2.0"
